--- a/CHL-Frontend/src/app/components/past-records/past-records.component.scss
+++ b/CHL-Frontend/src/app/components/past-records/past-records.component.scss
@@ -54,14 +54,12 @@
                         #sort-by {
                             width: 5.25em;
                             height: 1.875em;
-
-                            // font-family: "Poppins";
-                            // font-style: normal;
-                            // font-weight: 600;
                             font-size: 1.25em;
                             line-height: 1.875em;
                             letter-spacing: 0.1em;
                             color: rgba(0, 0, 0, 0.85);
+                            padding-left: 0;
+                            margin-right: 0.625em;
                         }
                     }
 
