search button now works

--- a/CHL-Frontend/src/app/components/past-records/past-records.component.html
+++ b/CHL-Frontend/src/app/components/past-records/past-records.component.html
@@ -25,7 +25,7 @@
               <app-input *ngIf="filterSelector === 'Severity'" [ipConfig]="searchWithSeverityTo" (outputEmit)="onClickSeverityToReceived($event)"></app-input>
             </div>
             <div>
-              <app-button [btntext]="'Search'" [btnConfig]="textBtnConfig3"></app-button>
+              <app-button [btntext]="'Search'" [btnConfig]="textBtnConfig3" (click)="search()"></app-button>
             </div>
           </div>
           <div class="right">
