--- a/CHL-Frontend/src/app/components/patient/patient-dashboard/patient-dashboard.component.html
+++ b/CHL-Frontend/src/app/components/patient/patient-dashboard/patient-dashboard.component.html
@@ -10,16 +10,11 @@
             <p id="heading"><b>Dashboard</b></p>
             <div class="chart">
                 <div class="pulseRate">
-                <ejs-chart style='display:block' align='center' id='chartcontainer' [title]='title'
-                    [primaryXAxis]='primaryXAxis' [primaryYAxis]='primaryYAxis' [tooltip]='tooltip'
-                    (load)='load($event)' [chartArea]='chartArea' [width]='width' [legendSettings]='legend'>
+                    <pulse-line-graph></pulse-line-graph>
+                </div>
+                <div class="bpGraph">
 
-                    <e-series-collection>
-                        <e-series [dataSource]='pulseRate' type='Line' xName='date' yName='pulse' width=2 opacity=1>
-                        </e-series>
-                    </e-series-collection>
-                </ejs-chart>
-            </div>
+                </div>
             </div>
 
             <app-button [btntext]="'Refresh'" (onClick)="onClick()"></app-button>
