--- a/CHL-Frontend/src/app/components/patient/patient-dashboard/patient-dashboard.component.scss
+++ b/CHL-Frontend/src/app/components/patient/patient-dashboard/patient-dashboard.component.scss
@@ -34,6 +34,10 @@
             color: #2C2D2D;
         
         }
+        .pulseRate{
+            width: 50%;
+            height: 50%;
+        }
     }
     
     
