--- a/CHL-Frontend/src/app/components/patient/patient-dashboard/patient-dashboard.component.html
+++ b/CHL-Frontend/src/app/components/patient/patient-dashboard/patient-dashboard.component.html
@@ -8,12 +8,12 @@
         </div>
         <div class="flex-item2">
             <p id="heading"><b>Dashboard</b></p>
-            <div class="chart">
+            <div class="chart1">
                 <div class="pulseRate">
                     <pulse-line-graph></pulse-line-graph>
                 </div>
                 <div class="bpGraph">
-
+                    <bmi-line-graph></bmi-line-graph>
                 </div>
             </div>
 
