--- a/CHL-Frontend/src/app/components/patient/patient-dashboard/patient-dashboard.component.scss
+++ b/CHL-Frontend/src/app/components/patient/patient-dashboard/patient-dashboard.component.scss
@@ -34,10 +34,17 @@
             color: #2C2D2D;
         
         }
-        .pulseRate{
-            width: 50%;
-            height: 50%;
+        .chart1{
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+
+            .pulseRate{
+                width: 50%;
+                height: 20%;
+            }
         }
+        
     }
     
     
