graphs working together now

--- a/CHL-Frontend/src/app/components/graphs/bmi-line-graph/bmi-line-graph.component.html
+++ b/CHL-Frontend/src/app/components/graphs/bmi-line-graph/bmi-line-graph.component.html
@@ -3,7 +3,7 @@
                     (load)='load($event)' [chartArea]='chartArea'  [legendSettings]='legend'>
 
                     <e-series-collection>
-                        <e-series [dataSource]='pulseRate' type='Line' xName='date' yName='pulse' width=2 opacity=1>
+                        <e-series [dataSource]='BMI' type='Line' xName='date' yName='bmi' width=2 opacity=1>
                         </e-series>
                     </e-series-collection>
                 </ejs-chart>
