--- a/CHL-Frontend/src/app/components/graphs/pulse-line-graph/pulse-line-graph.component.html
+++ b/CHL-Frontend/src/app/components/graphs/pulse-line-graph/pulse-line-graph.component.html
@@ -1,4 +1,4 @@
-<ejs-chart style='display:block' align='center' id='chartcontainer' [title]='title'
+<ejs-chart  id="chart-container" style='display:block' align='center'  [title]='title'
                     [primaryXAxis]='primaryXAxis' [primaryYAxis]='primaryYAxis' [tooltip]='tooltip'
                     (load)='load($event)' [chartArea]='chartArea'  [legendSettings]='legend'>
 
