--- a/CHL-Frontend/src/app/components/patient/patient-dashboard/patient-dashboard.component.html
+++ b/CHL-Frontend/src/app/components/patient/patient-dashboard/patient-dashboard.component.html
@@ -9,7 +9,9 @@
         <div class="flex-item2">
             <p id="heading"><b>Dashboard</b></p>
             <div class="chart0">
-                
+                <div class="bpGraph">
+                    <bp-graph></bp-graph>
+                </div>
             </div>
             <div class="chart1">
                 <div class="pulseRate">
