--- a/CHL-Frontend/src/app/components/past-records/past-records.component.html
+++ b/CHL-Frontend/src/app/components/past-records/past-records.component.html
@@ -81,6 +81,7 @@
           <table>
             <tr>
               <th>Date</th>
+              <th>Doctor ID</th>
               <th>Doctor name</th>
               <th>Diagnosis</th>
               <th>Severity</th>
@@ -88,6 +89,7 @@
             </tr>
             <tr *ngFor="let pastRecord of allPastRecordsOfAPatient">
               <td>{{pastRecord.uploadDate}}</td>
+              <td>{{pastRecord.doctorId}}</td>
               <td>{{pastRecord.doctorName}}</td>
               <td>{{pastRecord.diagnosis}}</td>
               <td>{{pastRecord.severity}}</td>
