--- a/CHL-Frontend/src/app/components/graphs/pulse-line-graph/pulse-line-graph.component.html
+++ b/CHL-Frontend/src/app/components/graphs/pulse-line-graph/pulse-line-graph.component.html
@@ -1,9 +1,11 @@
+<div  style="width:100%; height:15em;" >
 <ejs-chart  id="chart-container" style='display:block' align='center'  [title]='title'
                     [primaryXAxis]='primaryXAxis' [primaryYAxis]='primaryYAxis' [tooltip]='tooltip'
                     (load)='load($event)' [chartArea]='chartArea'  [legendSettings]='legend'>
 
                     <e-series-collection>
-                        <e-series [dataSource]='pulseRate' type='Line' xName='date' yName='pulse' width=2 opacity=1>
+                        <e-series [dataSource]='pulseRate' type='Line' xName='date' yName='pulse' [marker]='circleMarker' width=2 opacity=1>
                         </e-series>
                     </e-series-collection>
                 </ejs-chart>
+            </div>
