--- a/CHL-Frontend/src/app/components/patient/patient-dashboard/patient-dashboard.component.html
+++ b/CHL-Frontend/src/app/components/patient/patient-dashboard/patient-dashboard.component.html
@@ -8,23 +8,45 @@
         </div>
         <div class="flex-item2">
             <p id="heading"><b>Dashboard</b></p>
-            <div class="chart0">
-                <div class="bpGraph">
-                    <bp-graph></bp-graph>
+            <div class="main-flex">
+                <div class="chart0">
+                    <div class="bpGraph">
+                        <bp-graph></bp-graph>
+                    </div>
+
+                    <div class="inner-flex">
+                        <div id="cards" class="card1">
+                            <div class="text">
+                                <p>Number of appointments</p>
+                                <h3>16</h3>
+                            </div>
+                            <div id="image" style="background-color: #F3FCEA; height: 4em; width: 3.8em;"><img src="assets/images/appointments.png"  ></div>
+                        </div>
+                        <div id="cards" class="card2">
+                            <div class="text">
+                                <p>Total diseases</p>
+                                <h3>03</h3>
+                            </div>
+                            <div id="image" style="background-color:#FCEAEE; height: 3.8em; width: 3.6em;"><img src="assets/images/diseases.png" ></div>
+                        </div>
+                        <div class="refresh">
+                            <app-button [btntext]="'Refresh'" (onClick)="onClick()"></app-button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="chart1">
+                    <div class="pulseRate">
+                        <pulse-line-graph></pulse-line-graph>
+                    </div>
+                    <div class="bmiGraph">
+                        <bmi-line-graph></bmi-line-graph>
+                    </div>
+
                 </div>
             </div>
-            <div class="chart1">
-                <div class="pulseRate">
-                    <pulse-line-graph></pulse-line-graph>
-                </div>
-                <div class="bmiGraph">
-                    <bmi-line-graph></bmi-line-graph>
-                </div>
-                
-            </div>
-            <div class="refresh">
-                <app-button [btntext]="'Refresh'" (onClick)="onClick()"></app-button></div>
-    
+
+
         </div>
     </div>
 </div>
