--- a/CHL-Frontend/src/app/components/past-records/past-records.component.html
+++ b/CHL-Frontend/src/app/components/past-records/past-records.component.html
@@ -108,6 +108,7 @@
               <th>Doctor name</th>
               <th>Diagnosis</th>
               <th>Severity</th>
+              <th>Uploaded by</th>
               <th>Prescription</th>
             </tr>
             <tr *ngFor="let pastRecord of allPastRecordsOfAPatient">
@@ -116,6 +117,7 @@
               <td>{{pastRecord.doctorName}}</td>
               <td>{{pastRecord.diagnosis}}</td>
               <td>{{pastRecord.severity}}</td>
+              <td>{{pastRecord.uploadedBy}}</td>
               <!-- <td>{{todo.targetDate | date}}</td> -->
               <td>
                 <app-button [btntext]="'View'" [btnConfig]="textBtnConfig"></app-button>
