--- a/CHL-Frontend/src/app/components/patient/patient-registration/patient-registration.component.scss
+++ b/CHL-Frontend/src/app/components/patient/patient-registration/patient-registration.component.scss
@@ -13,8 +13,8 @@
     background-color: #F5FEFF;
     display:flex;
     flex-direction: row;
-    justify-content: center;
     justify-content: space-evenly;
+    align-items: center;
     margin: 0;
     padding: 0;
 
@@ -24,6 +24,7 @@
         display:flex;
         flex-direction: column;
         justify-content: center;
+        align-items: center;
         #reg-image{
             height: 19em;
             width:26em;
@@ -34,8 +35,8 @@
         text-align: center;
         font-family: 'Montserrat';
         font-style: normal;
-        padding-left:2em ;
-        padding-top:1.3em;
+        margin-left: 3em;
+        padding-left: 3.5em;
     
         #main-text {
             color: #2C2D2D;
@@ -51,7 +52,6 @@
             letter-spacing: 0.1em;
             color: #737373;
             width: 22em;
-            margin-left:7em ;
         }
     }
     }
