--- a/CHL-Frontend/src/app/components/patient/personal-details/personal-details.component.html
+++ b/CHL-Frontend/src/app/components/patient/personal-details/personal-details.component.html
@@ -11,12 +11,12 @@
       <div>{{patient.lastname}}</div>
       <div id="text2">Update Details</div>
       <div id="container">
-        <form (ngSubmit)="onupdate()">
+        <form [formGroup]="modalForm" (ngSubmit)="onupdate()" > 
           <div id="container1">
             <div id="sub-container1">
               <div class="form-group">
                 <label for="first name">First name</label>
-                <!-- <input id="first name" type="text" class="form-control" /> -->
+                <!-- <input id="first name" formControlName="fn" type="text"  /> -->
                 <app-input [ipConfig]="ipConfig1" (outputEmit)="firstNameReceived($event) "></app-input>
               </div>
               <div class="form-group">
