--- a/CHL-Frontend/src/app/components/patient/medications/medications.component.html
+++ b/CHL-Frontend/src/app/components/patient/medications/medications.component.html
@@ -27,22 +27,17 @@
                 <div class="table-container">
                     <table>
                         <tr>
-                            <th>Date</th>
-                            <th>Doctor ID</th>
-                            <th>Doctor name</th>
-                            <th>Diagnosis</th>
-                            <th>Severity</th>
-                            <th>Uploaded by</th>
-                            <th>Prescription</th>
+                            <th>Medicine</th>
+                            <th>Dosage</th>
+                            <th>Starting date</th>
+                            <th>Record ID</th>
+                            <th>Action</th>
                         </tr>
-                        <tr *ngFor="let pastRecord of allPastRecordsOfAPatient">
-                            <td>{{pastRecord.uploadDate}}</td>
-                            <td>{{pastRecord.doctorId}}</td>
-                            <td>{{pastRecord.doctorName}}</td>
-                            <td>{{pastRecord.diagnosis}}</td>
-                            <td>{{pastRecord.severity}}</td>
-                            <td>{{pastRecord.uploadedBy}}</td>
-                            <!-- <td>{{todo.targetDate | date}}</td> -->
+                        <tr *ngFor="let medication of allMedicalDataOfAPatient">
+                            <td>{{medication.medicine}}</td>
+                            <td>{{medication.dosage}}</td>
+                            <td>{{medication.startingDate}}</td>
+                            <td>{{medication.recordId}}</td>
                             <td>
                                 <app-button [btntext]="'View'" [btnConfig]="textBtnConfig"></app-button>
                             </td>
@@ -63,22 +58,17 @@
                 <div class="table-container">
                     <table>
                         <tr>
-                            <th>Date</th>
-                            <th>Doctor ID</th>
-                            <th>Doctor name</th>
-                            <th>Diagnosis</th>
-                            <th>Severity</th>
-                            <th>Uploaded by</th>
-                            <th>Prescription</th>
+                            <th>Medicine</th>
+                            <th>Dosage</th>
+                            <th>Starting date</th>
+                            <th>Record ID</th>
+                            <th>Action</th>
                         </tr>
-                        <tr *ngFor="let pastRecord of allPastRecordsOfAPatient">
-                            <td>{{pastRecord.uploadDate}}</td>
-                            <td>{{pastRecord.doctorId}}</td>
-                            <td>{{pastRecord.doctorName}}</td>
-                            <td>{{pastRecord.diagnosis}}</td>
-                            <td>{{pastRecord.severity}}</td>
-                            <td>{{pastRecord.uploadedBy}}</td>
-                            <!-- <td>{{todo.targetDate | date}}</td> -->
+                        <tr *ngFor="let medication of allMedicalDataOfAPatient">
+                            <td>{{medication.medicine}}</td>
+                            <td>{{medication.dosage}}</td>
+                            <td>{{medication.startingDate}}</td>
+                            <td>{{medication.recordId}}</td>
                             <td>
                                 <app-button [btntext]="'View'" [btnConfig]="textBtnConfig"></app-button>
                             </td>
