--- a/CHL-Frontend/src/app/components/patient/medications/medications.component.html
+++ b/CHL-Frontend/src/app/components/patient/medications/medications.component.html
@@ -18,10 +18,61 @@
                     </div>
                     <div class="right">
                         <div>
-                            <app-button [btntext]="'Add'" [btnConfig]="textBtnConfig2" (click)="''">
+                            <app-button [btntext]="'Add'" [btnConfig]="textBtnConfig2" (click)="openPopup()">
                             </app-button>
                         </div>
+                        <!--Modal starts-->
+                        <div>
+                            <div class="modal" tabindex="-1" role="dialog" [ngStyle]="{'display':displayStyle}">
+                                <div class="modal-dialog modal-lg" role="document">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h4 class="modal-title">Add Current Medication</h4>
+                                        </div>
 
+                                        <div class="modal-body">
+                                            <div class="flex-modal">
+                                                <div class="grid-item">
+                                                    <label>Medicine:</label>
+                                                    <app-input
+                                                        (outputEmit)="medicationData.medicine=$event"
+                                                        [ipConfig]="nameConfig">
+                                                    </app-input>
+                                                </div>
+                                                <div class="grid-item">
+                                                    <label>Dosage:</label>
+                                                    <app-input [ipConfig]="nameConfig"
+                                                        (outputEmit)="medicationData.dosage=$event">
+                                                    </app-input>
+                                                </div>
+                                                <div class="grid-item">
+                                                    <label>Starting date:</label>
+                                                    <app-input [ipConfig]="dateConfig"
+                                                        (outputEmit)="medicationData.startingDate=$event">
+                                                    </app-input>
+                                                </div>
+                                                <div class="grid-item">
+                                                    <label>Record ID:</label>
+                                                    <app-input [ipConfig]="idConfig"
+                                                        (outputEmit)="medicationData.recordId=$event">
+                                                    </app-input>
+                                                </div>
+                                            </div>
+
+                                        </div>
+
+                                        <div class="modal-footer">
+                                            <app-button [btntext]="'Save'" [btnConfig]="textBtnConfig"
+                                                (click)="submitNewMedication()"></app-button>
+                                            <app-button [btntext]="'Close'" [btnConfig]="textBtnConfig2"
+                                                (click)="closePopup()"></app-button>
+                                        </div>
+
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!--Modal ends-->
                     </div>
                 </div>
                 <div class="table-container">
@@ -40,7 +91,8 @@
                                 <td>{{medication.startingDate}}</td>
                                 <td>{{medication.recordId}}</td>
                                 <td>
-                                    <app-button [btntext]="'Remove'" [btnConfig]="textBtnConfig" (click)="removeOrDeleteMedication(medication.id)"></app-button>
+                                    <app-button [btntext]="'Remove'" [btnConfig]="textBtnConfig"
+                                        (click)="removeOrDeleteMedication(medication.id)"></app-button>
                                 </td>
                             </tr>
                         </ng-container>
@@ -73,7 +125,8 @@
                                 <td>{{medication.startingDate}}</td>
                                 <td>{{medication.recordId}}</td>
                                 <td>
-                                    <app-button [btntext]="'Delete'" [btnConfig]="textBtnConfig" (click)="removeOrDeleteMedication(medication.id)"></app-button>
+                                    <app-button [btntext]="'Delete'" [btnConfig]="deleteBtnConfig"
+                                        (click)="removeOrDeleteMedication(medication.id)"></app-button>
                                 </td>
                             </tr>
                         </ng-container>
