--- a/CHL-Frontend/src/app/components/patient/patient-registration/patient-registration.component.html
+++ b/CHL-Frontend/src/app/components/patient/patient-registration/patient-registration.component.html
@@ -122,7 +122,7 @@
                     </div>
                     </div>
                     <div id="login-btn">
-                        <app-button [btntext]="'Register'" [btnConfig]="textBtnConfig"></app-button>
+                        <app-button [btntext]="'Register'" [btnConfig]="textBtnConfig" (onClick)="onDocSubmit()"></app-button>
                     </div>
                 </div>
             </form>
