--- a/CHL-Frontend/src/app/components/patient/medical-data/medical-data.component.html
+++ b/CHL-Frontend/src/app/components/patient/medical-data/medical-data.component.html
@@ -1,6 +1,6 @@
 <div id="main-container">
     <div id="nav">
-    <app-navbar [button]="false" [name]="'Akanksha Gaonkar'"></app-navbar></div>
+    <app-navbar [button]="false" [name]="'Rohit Pandey'"></app-navbar></div>
     <div id="parent-container">
       <div class="sidebar"><app-sidebar [menus]="menus"></app-sidebar></div>
       <div id="sub-container">
