--- a/CHL-Frontend/src/app/components/patient/patient-registration/patient-registration.component.html
+++ b/CHL-Frontend/src/app/components/patient/patient-registration/patient-registration.component.html
@@ -39,7 +39,7 @@
                         </div>
                         <div class="form-flex">
                             <label for="contact">Contact Number </label>
-                            <app-input [ipConfig]="ipConfig" (outputEmit)="contactReceived($event)"></app-input>
+                            <app-input [ipConfig]="ipConfig1" (outputEmit)="contactReceived($event)"></app-input>
                         </div>
                     </div>
                     <div class="form-group">
@@ -49,7 +49,7 @@
                         </div>
                         <div class="form-flex">
                             <label for="age">Age </label>
-                            <app-input [ipConfig]="ipConfig" (outputEmit)="ageReceived($event)"></app-input>
+                            <app-input [ipConfig]="ipConfig3" (outputEmit)="ageReceived($event)"></app-input>
                         </div>
                     </div>
                     <div class="form-group">
@@ -59,7 +59,7 @@
                         </div>
                         <div class="form-flex">
                             <label for="password">Password </label>
-                            <app-input [ipConfig]="ipConfig" (outputEmit)="pwdReceived($event)"></app-input>
+                            <app-input [ipConfig]="ipConfig2" (outputEmit)="pwdReceived($event)"></app-input>
                         </div>
                     </div>
                     <br>
@@ -78,17 +78,17 @@
                     </div>
                     <div class="form-flex">
                         <label for="aadhar">Aadhar No </label>
-                        <app-input [ipConfig]="ipConfig" (outputEmit)="aadharReceived($event)"></app-input>
+                        <app-input [ipConfig]="ipConfig3" (outputEmit)="aadharReceived($event)"></app-input>
                     </div>
                     </div>
                     <div class="form-group">
                     <div class="form-flex">
                         <label for="regNO">Registration No </label>
-                        <app-input [ipConfig]="ipConfig" (outputEmit)="regNoReceived($event)"></app-input>
+                        <app-input [ipConfig]="ipConfig3" (outputEmit)="regNoReceived($event)"></app-input>
                     </div>
                     <div class="form-flex">
                         <label for="year">Year of Registration </label>
-                        <app-input [ipConfig]="ipConfig" (outputEmit)="yearReceived($event)"></app-input>
+                        <app-input [ipConfig]="ipConfig3" (outputEmit)="yearReceived($event)"></app-input>
                     </div>
                     </div>
                     <div class="form-group">
@@ -108,7 +108,7 @@
                     </div>
                     <div class="form-flex">
                         <label for="contact">Contact Number </label>
-                        <app-input [ipConfig]="ipConfig" (outputEmit)="docContactReceived($event)"></app-input>
+                        <app-input [ipConfig]="ipConfig1" (outputEmit)="docContactReceived($event)" ></app-input>
                     </div>
                     </div>
                     <div class="form-group">
@@ -118,7 +118,7 @@
                     </div>
                     <div class="form-flex">
                         <label for="password">Password </label>
-                        <app-input [ipConfig]="ipConfig" (outputEmit)="docPwdReceived($event)"></app-input>
+                        <app-input [ipConfig]="ipConfig2" (outputEmit)="docPwdReceived($event)"></app-input>
                     </div>
                     </div>
                     <div id="login-btn">
