--- a/CHL-Frontend/src/app/components/login-page/login/login.component.scss
+++ b/CHL-Frontend/src/app/components/login-page/login/login.component.scss
@@ -52,13 +52,13 @@
                 display: flex;
                 flex-direction: column;
                 gap: 1.7em;
-                align-items: center;
+                // align-items: center;
 
 
                 #login-heading {
+                    text-align: left;
                     p {
                         font-size: 1.2em;
-                        text-align: center;
                         font-weight: 700;
                         line-height: 1.3em;
                     }
@@ -68,7 +68,6 @@
                         font-size: 0.9em;
                         line-height: 1em;
                         color: #1A1A1A;
-                        text-align: center;
                         border: #1A1A1A soild;
                     }
                 }
