redesigning the medical data page. Outline created

--- a/CHL-Frontend/src/app/components/patient/medical-data/medical-data.component.scss
+++ b/CHL-Frontend/src/app/components/patient/medical-data/medical-data.component.scss
@@ -1,154 +1,159 @@
-#main-container{
+.main-container {
     width: 100vw;
     height: 100vh;
+
+    #nav {
+        height: 7%;
+        width: 100%;
+    }
+
+    .subcontainer {
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+        height: 93%;
+        background-color: #f5feff;
+
+        .flex-item1 {
+            width: 18%;
+            height: 100%;
+        }
+
+        .flex-item2 {
+            width: 82%;
+            height: 100%;
+
+            .main {
+                margin: 2em;
+                width: 94%;
+                height: 90%;
+                background-color: #fff;
+                box-shadow: 0 0.125em 0.5em rgba(0, 0, 0, 0.15);
+                border-radius: 0.5em;
+
+                #text1 {
+                    font-family: "Montserrat";
+                    font-style: normal;
+                    font-weight: 500;
+                    font-size: 1em;
+                    line-height: 1.25em;
+                    color: #737373;
+                    padding-top: 1.25em;
+                    padding-left: 1.25em;
+                }
+
+                .search-filter {
+                    display: flex;
+                    justify-content: space-between;
+                    margin: 1.25em;
+
+                    .left {
+                        display: flex;
+                        justify-content: space-between;
+
+                        #sort-by {
+                            display: flex;
+                            font-family: 'Montserrat';
+                            font-style: normal;
+                            font-weight: 700;
+                            font-size: 1.25em;
+                            line-height: 1.5em;
+                            letter-spacing: 0.1em;
+                            align-items: flex-end;
+                            color: #000000;
+
+                        }
+                    }
+
+                    .right {
+                        display: flex;
+                        justify-content: space-between;
+                    }
+                }
+
+                .table-container {
+                    position: relative;
+                    margin: 1.25em;
+                    height: 30%;
+                    overflow-y: auto;
+                }
+            }
+        }
+    }
 }
 
-#nav{
-    height:7%;
+
+.flex-modal {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    gap: 2em 2em;
+    grid-auto-flow: row;
+    grid-template-areas:
+        ". ."
+        ". .";
+
+    .grid-item {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+}
+
+
+
+
+
+
+
+
+
+table {
+    position: absolute;
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
     width: 100%;
 }
 
- #parent-container{
-    background-color: #F5FEFF;
-    height:93%;
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-
- }
- .sidebar{
-    height: 100%;
-    width: 18%;
- }
-
-#sub-container{
-    background-color: #ffff;
-    box-shadow: -1px 2px 5px 4px rgba(115,115,115,0.29);
-    border-radius: 6px;
-    width:77%; 
-    height: 90%;
-    margin: auto;
+td,
+th {
+    border: 0.0625em solid #dddddd;
+    text-align: left;
+    padding: 0.5em;
 }
 
-#container{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+th {
+    background-color: #f5f5f5;
+
+    gap: 0.25em;
+    isolation: isolate;
+    width: 17.8em;
+    height: 3.4375em;
+    background: #f5f5f5;
+    border-bottom: 0.0625em solid rgba(0, 0, 0, 0.06);
+
+    font-family: "Montserrat";
+    font-style: normal;
+    font-weight: 600;
+    font-size: 1em;
+    line-height: 1.375em;
+    color: rgba(0, 0, 0, 0.85);
 }
 
-#sub-container1,#sub-container2{
-    width: 100%;
+table,
+th,
+td {
+    border-left: none;
+    border-right: none;
+    border-bottom: 0.0625em solid rgba(0, 0, 0, 0.06);
 }
 
-#container2{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-}
-
-#container1{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-items: center;
-    width: 100%;
-}
-
-#side-bar{
-    width:100%; 
-    height: 100%;
-}
-
-#address-bar{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-items: center;
-    padding: 0px 70px ;
-
-}
-#sub-container1,#sub-container2{
-    padding: 0px 80px ;
-}
-
-label + input:focus {
-    color: #1CB5BD;
-}
-
-.form-group{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    padding-bottom: 1em;
-    
-}
-
-form{
-    width: 100%;
-    font-family: 'Montserrat';
+td {
+    height: 1.375em;
+    font-family: "Montserrat";
     font-style: normal;
     font-weight: 400;
-    font-size: 20px;
-    line-height: 20px;
-    text-align: right;
-    color: #1A1A1A;
-}
-
-input{
-    width: 280px;
-    height: 40px;
-    font-family: 'Montserrat';
-    font-style: normal;
-    font-size: 20px;
-    line-height: 20px;
-    color: #1A1A1A;
-}
-
-label{
-    font-size: 16px;
-    text-align: left;
-    padding-right: 10px;
-}
-
-#text2{
-    font-family: 'Montserrat';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 20px;
-    line-height: 29px;
-    padding-top: 30px;
-    padding-left: 40px;
-    padding-bottom: 50px;
-    color: #2C2D2D;
-}
-
-#text1{
-    font-family: 'Montserrat';
-    font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 20px;
-    color: #737373;
-    padding-top: 30px;
-    padding-left: 40px;
-}
-
-#address{
-    width:80%;
-    height: 150px;
-}
-
-input:focus{
-    border-color: #1CB5BD;
-    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px #1CB5BD;
-    outline: 0 none;
-}
-
-#update-btn{
-    padding-top: 2em;
+    font-size: 1em;
+    line-height: 1.375em;
+    color: rgba(0, 0, 0, 0.85);
 }
