--- a/CHL-Frontend/src/app/components/patient/medical-data/medical-data.component.html
+++ b/CHL-Frontend/src/app/components/patient/medical-data/medical-data.component.html
@@ -1,26 +1,78 @@
 <div class="main-container">
   <div id="nav">
-      <app-navbar [button]="false" [name]="'Rohit Pandey'"></app-navbar>
+    <app-navbar [button]="false" [name]="'Rohit Pandey'"></app-navbar>
   </div>
   <div class="subcontainer">
-      <div class="flex-item1">
-          <app-sidebar [menus]="menus"></app-sidebar>
-      </div>
-      <div class="flex-item2">
-          <div class="main">
-              <div id="text1"><a href="#"></a>&lt; &nbsp; Back to Dashboard</div>
-              <div class="search-filter">
-                  <div class="left">
-                      <div id="sort-by">
-                          Update Details
-                      </div>
-                  </div>
-                  <div class="right">
-                    
-                  </div>
-              </div>
-
+    <div class="flex-item1">
+      <app-sidebar [menus]="menus"></app-sidebar>
+    </div>
+    <div class="flex-item2">
+      <div class="main">
+        <div id="text1"><a href="#"></a>&lt; &nbsp; Back to Dashboard</div>
+        <div class="search-filter">
+          <div class="left">
+            <div id="sort-by">
+              Update Details
+            </div>
           </div>
+          <div class="right"></div>
+        </div>
+        <div class="outline">
+          <div class="update-form-container">
+            <div class="form-cell">
+              <div class="cell">
+                <label>Height:</label>
+                <app-input [userInput]="heightPrefill" [ipConfig]="heightConfig" (outputEmit)="''"></app-input>
+              </div>
+            </div>
+            <div class="form-cell">
+              <div class="cell">
+                <label>Weight:</label>
+                <app-input [userInput]="heightPrefill" [ipConfig]="weightConfig" (outputEmit)="''"></app-input>
+              </div>
+            </div>
+            <div class="form-cell">
+              <div class="cell">
+                <label>BMI:</label>
+                <app-input [userInput]="heightPrefill" [ipConfig]="bmiConfig" (outputEmit)="''"></app-input>
+              </div>
+            </div>
+            <div class="form-cell">
+              <div class="cell">
+                <label>Allergies:</label>
+                <app-input [userInput]="heightPrefill" [ipConfig]="allergiesConfig" (outputEmit)="''"></app-input>
+              </div>
+            </div>
+            <div class="form-cell">
+              <div class="cell">
+                <label>Immunizations:</label>
+                <app-input [userInput]="heightPrefill" [ipConfig]="heightConfig" (outputEmit)="''"></app-input>
+              </div>
+            </div>
+            <div class="form-cell">
+              <div class="cell">
+                <label>Blood group:</label>
+                <app-input [userInput]="heightPrefill" [ipConfig]="heightConfig" (outputEmit)="''"></app-input>
+              </div>
+            </div>
+            <div class="form-cell">
+              <div class="cell" style="margin-bottom: 1.25em;">
+                <label>Family medical history:</label>
+                <!-- <app-input [userInput]="heightPrefill" [ipConfig]="heightConfig" (outputEmit)="''"></app-input> -->
+                <textarea name="" id="" cols="30" rows="10"></textarea>
+              </div>
+            </div>
+            <div class="form-cell">
+              <div class="cell" style="margin-bottom: 1.25em;">
+                <label>Chronic health problems:</label>
+                <textarea name="" id="" cols="30" rows="10"></textarea>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div id="button-div">
+          <app-button [btntext]="'Save'" [btnConfig]="textBtnConfig"></app-button>
+        </div>
       </div>
+    </div>
   </div>
-</div>
