--- a/CHL-Frontend/src/app/components/patient/medical-data/medical-data.component.html
+++ b/CHL-Frontend/src/app/components/patient/medical-data/medical-data.component.html
@@ -52,13 +52,13 @@
             <div class="form-cell">
               <div class="cell">
                 <label>Blood group:</label>
-                <app-input [userInput]="heightPrefill" [ipConfig]="heightConfig" (outputEmit)="''"></app-input>
+                <!-- <app-input [userInput]="heightPrefill" [ipConfig]="heightConfig" (outputEmit)="''"></app-input> -->
+                <app-dropdown [states]="optionList" [dropConfig]="textDropConfig"></app-dropdown>
               </div>
             </div>
             <div class="form-cell">
               <div class="cell" style="margin-bottom: 1.25em;">
                 <label>Family medical history:</label>
-                <!-- <app-input [userInput]="heightPrefill" [ipConfig]="heightConfig" (outputEmit)="''"></app-input> -->
                 <textarea name="" id="" cols="30" rows="10"></textarea>
               </div>
             </div>
